--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/robotofont.css" type="text/css">
-    <link rel="stylesheet" href="css/icon.css">
-    <link rel="stylesheet" href="css/animsition.css">
-    <link rel="stylesheet" type="text/css" href="css/sweetalert.css">
-    <link rel="stylesheet" href="css/material.teal-deep_orange.min.css">  
-    <link rel="stylesheet" href="css/swipebox.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="http://davithace.github.io/davidwebapp/css/robotofont.css" type="text/css">
+    <link rel="stylesheet" href="http://davithace.github.io/davidwebapp/css/icon.css">
+    <link rel="stylesheet" href="http://davithace.github.io/davidwebapp/css/animsition.css">
+    <link rel="stylesheet" type="text/css" href="http://davithace.github.io/davidwebapp/css/sweetalert.css">
+    <link rel="stylesheet" href="http://davithace.github.io/davidwebapp/css/material.teal-deep_orange.min.css">  
+    <link rel="stylesheet" href="http://davithace.github.io/davidwebapp/css/swipebox.min.css">
+    <link rel="stylesheet" href="http://davithace.github.io/davidwebapp/css/style.css">
   </head>
 
   <body>
@@ -44,7 +44,7 @@
                     if(e.keyCode === 13){
                         //alert("Enter was pressed was presses");
                         var query = $("input[name=searchbox]").val();
-                        window.location.href="search.html?q="+query;
+                        window.location.href="http://davithace.github.io/davidwebapp/search.html?q="+query;
                     }
 
                     return false;
@@ -100,14 +100,14 @@
                 </a>
                 <div class="mdl-collapse__content-wrapper">
                   <div class="mdl-collapse__content mdl-animation--default" style="margin-top: -156px;">
-                    <a class="mdl-navigation__link animsition-link" href="category.html?tag=Dunia IT">Dunia IT</a>
-                    <a class="mdl-navigation__link animsition-link" href="category.html?tag=Research">IT Development</a>
-                    <a class="mdl-navigation__link animsition-link" href="category.html?tag=Tutorial IT">Tutorial</a>
-                    <a class="mdl-navigation__link animsition-link" href="category.html?tag=Movies">Film & Review</a>
-                    <a class="mdl-navigation__link animsition-link" href="category.html?tag=Kana Hanazawa">Ngidol Hanakana</a>
-                    <a class="mdl-navigation__link animsition-link" href="category.html?tag=JKT48">Ngidol Jiketi</a>
-                    <a class="mdl-navigation__link animsition-link" href="category.html?tag=opini">Opini</a>
-                    <a class="mdl-navigation__link animsition-link" href="search.html?q=download">Download</a>
+                    <a class="mdl-navigation__link animsition-link" href="http://davithace.github.io/davidwebapp/category.html?tag=Dunia IT">Dunia IT</a>
+                    <a class="mdl-navigation__link animsition-link" href="http://davithace.github.io/davidwebapp/category.html?tag=Research">IT Development</a>
+                    <a class="mdl-navigation__link animsition-link" href="http://davithace.github.io/davidwebapp/category.html?tag=Tutorial IT">Tutorial</a>
+                    <a class="mdl-navigation__link animsition-link" href="http://davithace.github.io/davidwebapp/category.html?tag=Movies">Film & Review</a>
+                    <a class="mdl-navigation__link animsition-link" href="http://davithace.github.io/davidwebapp/category.html?tag=Kana Hanazawa">Ngidol Hanakana</a>
+                    <a class="mdl-navigation__link animsition-link" href="http://davithace.github.io/davidwebapp/category.html?tag=JKT48">Ngidol Jiketi</a>
+                    <a class="mdl-navigation__link animsition-link" href="http://davithace.github.io/davidwebapp/category.html?tag=opini">Opini</a>
+                    <a class="mdl-navigation__link animsition-link" href="http://davithace.github.io/davidwebapp/search.html?q=download">Download</a>
                   </div>
                 </div>
             </div>
@@ -141,7 +141,7 @@
 
           <div class="player-featured"> <!-- featured cards -->
             <p>
-                                    <input type="button" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent pull-right" onclick="location.href='search.html?q=';" value="What's News ?" />
+                                    <input type="button" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent pull-right" onclick="location.href='http://davithace.github.io/davidwebapp/search.html?q=';" value="What's News ?" />
             </p>
 
 
@@ -181,7 +181,7 @@
           function NewContent2(json) {
                  var x = 1;
 
-            document.write('<div class="player-contents"> <!-- playing now list --><p><strong>Blog Posts &nbsp; &nbsp;&nbsp;</strong><a href="search.html?q="><button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent"> READ MORE</button> </a></p><ul>');
+            document.write('<div class="player-contents"> <!-- playing now list --><p><strong>Blog Posts &nbsp; &nbsp;&nbsp;</strong><a href="http://davithace.github.io/davidwebapp/search.html?q="><button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent"> READ MORE</button> </a></p><ul>');
             
             for (var i = 0; i < json.feed.entry.length; i++) {
               var judul = json.feed.entry[i].title.$t;
@@ -262,12 +262,12 @@
     </div>
     </div>
 
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/animsition.js"></script>
-    <script src="js/sweetalert.min.js"></script> 
-    <script src="js/material.min.js"></script>
-    <script src="js/jquery.swipebox.min.js"></script>
-    <script src="js/function.js"></script>
+    <script src="http://davithace.github.io/davidwebapp/js/jquery-2.1.4.min.js"></script>
+    <script src="http://davithace.github.io/davidwebapp/js/animsition.js"></script>
+    <script src="http://davithace.github.io/davidwebapp/js/sweetalert.min.js"></script> 
+    <script src="http://davithace.github.io/davidwebapp/js/material.min.js"></script>
+    <script src="http://davithace.github.io/davidwebapp/js/jquery.swipebox.min.js"></script>
+    <script src="http://davithace.github.io/davidwebapp/js/function.js"></script>
 
     <script type="text/javascript">
 //initialstorage
