--- a/savedarticle.html
+++ b/savedarticle.html
@@ -42,7 +42,10 @@
 
     <!-- Page Content -->
     <main class="mdl-layout__content"> 
-      <div class="article-bg"></div> <!-- header background -->
+      <script type="text/javascript">
+      var img = Math.floor((Math.random() * 4) + 1);
+        document.write('<img src="img/'+img+'.jpg" class="article-bg"></img>');
+        </script>
       <div class="article">
 
         <script type="text/javascript">
