--- a/article.html
+++ b/article.html
@@ -87,7 +87,7 @@
       <!-- Page Content -->
       <main class="mdl-layout__content"> 
       <script type="text/javascript">
-      var img = Math.floor((Math.random() * 5) + 1);
+      var img = Math.floor((Math.random() * 4) + 1);
         document.write('<img src="img/'+img+'.jpg" class="article-bg"></img>');
         </script>
         <div class="article">
@@ -168,8 +168,8 @@
                 var published = json.feed.entry[i].published.$t;
                 published = new Date(published);
                 published = convertDate(published);
-
-           var commentContent =  '<div class="drawer-separator"></div><div class="author comment"><div class="minilogo user1"></div><div class="card-author"><span><strong>'+author+'</strong></span><span>'+published+'</span></div><div class="clr"></div><br>'+isi+'</div>';
+            var ml = Math.floor((Math.random() * 4) + 1);
+           var commentContent =  '<div class="drawer-separator"></div><div class="author comment"><div class="minilogo user'+ml+'"></div><div class="card-author"><span><strong>'+author+'</strong></span><span>'+published+'</span></div><div class="clr"></div><br>'+isi+'</div>';
 
                 document.write(commentContent);
                 allcomment = allcomment + commentContent;
