--- a/savedlist.html
+++ b/savedlist.html
@@ -169,7 +169,7 @@
               ];
              
              var num=0;
-             for(i=1; i<=max;i++){
+             for(i=max; i>=0;i--){
               if (localStorage.getItem("postid"+i)!=null){
                 num=num+1;
                 var judul = localStorage.getItem("posttitle"+i);
