--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@ if(localStorage.getItem("init") == null){
  localStorage.setItem("init", 0);
 }
 </script>
+    
+<!-- shmokiads.com 300x250 Code -->
+<script type="text/javascript" src="//shmokiads.com/serve.php?p=37369&s=300x250"></script>
+<!-- shmokiads.com 300x250 Code End -->
 
   </body>
 </html>
