--- a/index.html
+++ b/index.html
@@ -276,9 +276,8 @@ if(localStorage.getItem("init") == null){
 }
 </script>
     
-<!-- shmokiads.com 300x250 Code -->
-<script type="text/javascript" src="//shmokiads.com/serve.php?p=37369&s=300x250"></script>
-<!-- shmokiads.com 300x250 Code End -->
+<script type="text/javascript" src="//ylx-1.com/bnr.php?section=General&amp;pub=942343&amp;format=300x250&amp;ga=g"></script>
+<noscript><a href="https://yllix.com/publishers/942343" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/300x250.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" /></a></noscript>
 
   </body>
 </html>
